codepkg/objects/Care_Label_Export__c.object
<CustomObject>
    <fields>
        <fullName>Brandicon_Art_Code__c</fullName>
        <label>Brandicon Art Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brandicon_image__c</fullName>
        <label>Brandicon image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Instruction__c</fullName>
        <label>Care Instruction</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ref_Model__c</fullName>
        <label>Customer Ref Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_BDC1__c</fullName>
        <label>ENG-BDC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_BDC2__c</fullName>
        <label>ENG-BDC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_BDC3__c</fullName>
        <label>ENG-BDC3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Comp1__c</fullName>
        <label>ENG-Comp1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Comp2__c</fullName>
        <label>ENG-Comp2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Comp3__c</fullName>
        <label>ENG-Comp3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DI1__c</fullName>
        <label>ENG-DI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DI2__c</fullName>
        <label>ENG-DI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DI3__c</fullName>
        <label>ENG-DI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DM1__c</fullName>
        <label>ENG-DM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DM2__c</fullName>
        <label>ENG-DM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_DM3__c</fullName>
        <label>ENG-DM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_ExC1__c</fullName>
        <label>ENG-ExC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_ExC2__c</fullName>
        <label>ENG-ExC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_ExC3__c</fullName>
        <label>ENG-ExC3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_II1__c</fullName>
        <label>ENG-II1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_II2__c</fullName>
        <label>ENG-II2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_II3__c</fullName>
        <label>ENG-II3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Mat1__c</fullName>
        <label>ENG-Mat1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Mat2__c</fullName>
        <label>ENG-Mat2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_Mat3__c</fullName>
        <label>ENG-Mat3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_RCC1__c</fullName>
        <label>ENG-RCC1</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENG_RCC2__c</fullName>
        <label>ENG-RCC2</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENG_RCC3__c</fullName>
        <label>ENG-RCC3</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENG_SI1__c</fullName>
        <label>ENG-SI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_SI2__c</fullName>
        <label>ENG-SI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_SI3__c</fullName>
        <label>ENG-SI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WI1__c</fullName>
        <label>ENG-WI1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WI2__c</fullName>
        <label>ENG-WI2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WI3__c</fullName>
        <label>ENG-WI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WM1__c</fullName>
        <label>ENG-WM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WM2__c</fullName>
        <label>ENG-WM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENG_WM3__c</fullName>
        <label>ENG-WM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_BDC1__c</fullName>
        <label>Image-BDC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_BDC2__c</fullName>
        <label>Image-BDC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_BDC3__c</fullName>
        <label>Image-BDC3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DI1__c</fullName>
        <label>Image-DI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DI2__c</fullName>
        <label>Image-DI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DI3__c</fullName>
        <label>Image-DI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DM1__c</fullName>
        <label>Image-DM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DM2__c</fullName>
        <label>Image-DM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_DM3__c</fullName>
        <label>Image-DM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_II1__c</fullName>
        <label>Image-II1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_II2__c</fullName>
        <label>Image-II2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_II3__c</fullName>
        <label>Image-II3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_RCC1__c</fullName>
        <label>Image-RCC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_RCC2__c</fullName>
        <label>Image-RCC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_RCC3__c</fullName>
        <label>Image-RCC3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_SI1__c</fullName>
        <label>Image-SI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_SI2__c</fullName>
        <label>Image-SI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_SI3__c</fullName>
        <label>Image-SI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WI1__c</fullName>
        <label>Image-WI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WI2__c</fullName>
        <label>Image-WI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WI3__c</fullName>
        <label>Image-WI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WM1__c</fullName>
        <label>Image-WM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WM2__c</fullName>
        <label>Image-WM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_WM3__c</fullName>
        <label>Image-WM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_BDC1__c</fullName>
        <label>LANG1-BDC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_BDC2__c</fullName>
        <label>LANG1-BDC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_BDC3__c</fullName>
        <label>LANG1-BDC3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Comp1__c</fullName>
        <label>LANG1-Comp1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Comp2__c</fullName>
        <label>LANG1-Comp2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Comp3__c</fullName>
        <label>LANG1-Comp3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DI1__c</fullName>
        <label>LANG1-DI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DI2__c</fullName>
        <label>LANG1-DI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DI3__c</fullName>
        <label>LANG1-DI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DM1__c</fullName>
        <label>LANG1-DM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DM2__c</fullName>
        <label>LANG1-DM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_DM3__c</fullName>
        <label>LANG1-DM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_ExC1__c</fullName>
        <label>LANG1-ExC1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_ExC2__c</fullName>
        <label>LANG1-ExC2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_ExC3__c</fullName>
        <label>LANG1-ExC3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_II1__c</fullName>
        <label>LANG1-II1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_II2__c</fullName>
        <label>LANG1-II2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_II3__c</fullName>
        <label>LANG1-II3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Mat1__c</fullName>
        <label>LANG1-Mat1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Mat2__c</fullName>
        <label>LANG1-Mat2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_Mat3__c</fullName>
        <label>LANG1-Mat3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_RCC1__c</fullName>
        <label>LANG1-RCC1</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LANG1_RCC2__c</fullName>
        <label>LANG1-RCC2</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LANG1_RCC3__c</fullName>
        <label>LANG1-RCC3</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LANG1_SI1__c</fullName>
        <label>LANG1-SI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_SI2__c</fullName>
        <label>LANG1-SI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_SI3__c</fullName>
        <label>LANG1-SI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WI1__c</fullName>
        <label>LANG1-WI1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WI2__c</fullName>
        <label>LANG1-WI2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WI3__c</fullName>
        <label>LANG1-WI3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WM1__c</fullName>
        <label>LANG1-WM1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WM2__c</fullName>
        <label>LANG1-WM2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANG1_WM3__c</fullName>
        <label>LANG1-WM3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labelling_Code__c</fullName>
        <label>Labelling Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang1_Country_Of_Origin__c</fullName>
        <label>Lang1 Country Of Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang1_Size_Chart_Size__c</fullName>
        <label>Lang1 Size Chart-Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang2_Country_Of_Origin__c</fullName>
        <label>Lang2 Country Of Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang2_Size_Chart_Size__c</fullName>
        <label>Lang2 Size Chart-Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang3_Country_Of_Origin__c</fullName>
        <label>Lang3 Country Of Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang3_Size_Chart_Size__c</fullName>
        <label>Lang3 Size Chart-Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_number__c</fullName>
        <label>Lot number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGLI_Name__c</fullName>
        <formula>MGLineItem__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MGLI Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGLineItem</label>
        <referenceTo>Sales_Order_Line_Items__c</referenceTo>
        <relationshipLabel>Care Label Exports</relationshipLabel>
        <relationshipName>Care_Label_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MG_ORDER__c</fullName>
        <label>MG ORDER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MG_ORD_LI__c</fullName>
        <label>MG ORD LI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainetti_Model_Code__c</fullName>
        <label>Mainetti Model Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_to_Company__c</fullName>
        <label>Order to Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS1__c</fullName>
        <label>POS1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS2__c</fullName>
        <label>POS2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS3__c</fullName>
        <label>POS3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Code__c</fullName>
        <label>Packaging Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintShop_IsBoolean__c</fullName>
        <formula>If( PrintShop__c = PrintShop_User__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrintShop IsBoolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintShop_User__c</fullName>
        <formula>$User.PrintShop_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrintShop User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintShop__c</fullName>
        <formula>MGLineItem__r.Printshop_Pick__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrintShop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RN_Number__c</fullName>
        <label>RN Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <label>Retailer Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season_Month__c</fullName>
        <label>Season Month</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season_Year__c</fullName>
        <label>Season Year</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <label>Ship To Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Ship to Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email__c</fullName>
        <label>Ship to Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Factory__c</fullName>
        <label>Ship to Factory</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Postcode__c</fullName>
        <label>Ship to Postcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Tel__c</fullName>
        <label>Ship to Tel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Terms__c</fullName>
        <label>Shipment Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizeChart_Size__c</fullName>
        <label>SizeChart-Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Number__c</fullName>
        <label>Style Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <label>Supplier Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1%</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2%</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3%</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDownload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Report  purpose created the field.</description>
        <label>IsDownload</label>
        <type>Checkbox</type>
    </fields>
    <label>Care Label Export</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isDownload__c</columns>
        <columns>MGLineItem__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLE-{0000}</displayFormat>
        <label>Care Label Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Label Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>